[package]
name = "leavebalance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.1", features = ["derive"] }
custom_error = "1.9.2"
holidays = "0.1.0"
serde = { version = "1.0.163", features = ["serde_derive"] }
toml = { version = "0.7.6", features = ["parse"] }
